--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,28 +1,43 @@
 <h1>Products</h1>
-<h3>{{date | date:'dd.MM.yyyy HH:mm'}}</h3>
-<button type="button" *ngIf="!showImage" (click)="toggleImage()">Show Image</button>
-<button type="button" *ngIf="showImage" (click)="toggleImage()">Hide Image</button>
+<h3>{{ date | date : "dd.MM.yyyy HH:mm" }}</h3>
+<button type="button" (click)="toggleImage()" class="btn btn-dark">
+  {{ showImage == true ? "Hide" : "Show" }}
+</button>
+<button type="button" (click)="zoomImage()">Povecaj</button>
+
+<div class="row" style="margin-top: 30px; margin-bootom: 20px">
+  <div class="col-lg-1"><label>Filter</label></div>
+  <div class="col-lg-3">
+    <input type="text" class="form-control" />
+  </div>
+</div>
 <div>
-    <table>
-        <thead>
-            <th>Slika</th>
-            <th>Product name</th>
-            <th>Product code</th>
-            <th>Category</th>
-            <th>Price</th>
-            <th>Rating</th>
-        </thead>
-        <tbody>
-            <tr *ngFor="let product of products">
-                <td>
-                    <img *ngIf="showImage" [src]="product.imageUrl" [title]="product.productName" width="50" />
-                </td>
-                <td>{{product.productName | uppercase}}</td>
-                <td>{{product.productCode | lowercase}}</td>
-                <td>{{product.category}}</td>
-                <td>{{product.price | currency:'USD':'symbol':'1.2-2'}}</td>
-                <td>{{product.rating | number: '1.2-2'}}</td>
-            </tr>
-        </tbody>
-    </table>
+  <table class="table table-dark table-striped">
+    <thead>
+      <th>Slika</th>
+      <th>Product name</th>
+      <th>Product code</th>
+      <th>Category</th>
+      <th>Price</th>
+      <th>Rating</th>
+    </thead>
+    <tbody>
+      <tr *ngFor="let product of products">
+        <td>
+          <img
+            *ngIf="showImage"
+            [src]="product.imageUrl"
+            [title]="product.productName"
+            [style.width.px]="imageWidth"
+            [style.border-radius.%]="imageRadius"
+          />
+        </td>
+        <td>{{ product.productName | uppercase }}</td>
+        <td>{{ product.productCode | lowercase }}</td>
+        <td>{{ product.category }}</td>
+        <td>{{ product.price | currency : "USD" : "symbol" : "1.2-2" }}</td>
+        <td>{{ product.rating | number : "1.2-2" }}</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
